# mc

./: .gitignore  CMakeLists.txt  README.md  main.c
gtests/: CMakeLists.txt  sxml_test.c
include/: dict.h  mc.h  repofile-ops.h  repofile.h  repoindex-ops.h  repoindex.h  sxml.h
src/: main.c  main.cpp  mc.c
src/file-operations/: CMakeLists.txt  repofile-list.c  repofile-list_test.cxx
src/file-operations/linux/: repofile-ops.c
src/file-operations/unix/: repofile-ops.c
src/file-operations/windows/: repofile-ops.c
src/index-operations/: CMakeLists.txt  repoindex-ops.c  repoindex-ops_test.cxx
src/util/: CMakeLists.txt  dict.c  dict_test.cxx
src/xml/: sxml.c  sxml_test.cxx
test/: main.cpp
